<resources>
    <string name="app_name">Saber</string>
    <string name="button_login">Log In</string>
    <string name="button_detail_akun">Detail Akun</string>
    <string name="button_register">Register</string>
    <string name="button_tarik_tunai">Tarik Tunai</string>
    <string name="button_setor_sampah">Setor Sampah</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="head_title_log_in_form_huge">Selamat Datang Kembali</string>
    <string name="head_title_log_in_form_small">Masuk dengan akun mu</string>
    <string name="foot_title_huge">Selamat Datang di SABER</string>
    <string name="foot_title_small">Aplikasi buang sampah menjadi menyenangkan</string>
    <string name="remember_me">Ingatkan saya</string>
    <string name="forgot_password">Lupa password ?</string>
    <string name="unregister_account_title">Belum punya akun ?</string>
    <string name="has_register_account_title">Sudah punya akun ?</string>
    <string name="title_hint_input_text_email_or_name">Masukkan E-mail</string>
    <string name="title_hint_input_text_password">Password</string>
    <string name="title_hint_input_text_name">Nama Depan</string>
    <string name="title_hint_input_text_address">Alamat</string>
    <string name="title_hint_input_text_phone">Telepon</string>
    <string name="title_hint_input_text_email">E-mail</string>
    <string name="title_hint_input_text_password_confirm">Konfirmasi Password</string>
    <string name="log_in_alternative_title">Atau Login dengan ?</string>
    <string name="google_account_title">Akun Google anda</string>
    <string name="google_title_logo">G</string>
    <string name="dashboard_title_menu_2">Menu Berarti</string>
    <string name="withdraw_label">Tarik Tunai</string>
    <string name="trash_deliver_label">Setor Sampah</string>
    <string name="account_detail_label">Detail Akun</string>
    <string name="welcome_title">Selamat Datang</string>
    <string name="balance_title">Saldo</string>
    <string name="history_title">Riwayat Anda</string>
    <string name="your_balance_title">Saldo Anda</string>
    <string name="dashboard_title_greeting_text">Buat sampah mu lebih berarti !!</string>
    <string name="dashboard_greeting_text">Aplikasi SABER adalah solusi untuk mengatasi masalah sosial tentang
        kebersihan lingkungan.
    </string>
    <string name="trf_to_bank_label">Transfer ke Bank</string>
    <string name="trf_to_label">Transfer ke</string>
    <string name="new_trf_bank_label">Transfer terbaru</string>
    <string name="trf_bank_label">Transfer Bank</string>
    <string name="account_number_archived">Rekening Tersimpan</string>
    <string name="add_new_account_number">Tambah Rekening Baru</string>
    <string name="change">Ubah</string>
    <string name="bank_name_label">Nama Bank</string>
    <string name="account_or_Va_number">No. Rek/Virtual Account</string>
    <string name="placeholder_Va_or_Ac">Masukan No. Rek/Virtual Account</string>
    <string name="stored_account_number">Simpan Rekening Bank</string>
    <string name="continue_label">Lanjutkan</string>
    <string name="warn_info_empty_bank_data">Silahkan Isi Seluruh Bidang Data Yang Tersedia</string>
    <string name="bank_data_not_found">Nomor Rekening / Virtual Akun Tidak Ditemukan</string>
    <string name="transfer_amount_label">Jumlah Transfer</string>
    <string name="id_curr">Rp</string>
    <string name="zero_balance">0</string>
    <string name="desc_trf">Deskripsi</string>
    <string name="desc_length_count">0/100</string>
    <string name="grand_total_amount_tf">Total jumlah yang ditransfer</string>
    <string name="desc_trf_field_hint">Masukan Deskripsi</string>
    <string name="invalid_amount">Silahkan Masukan Nilai Transfer Yang Sah, (0–9, 1 hingga 19 digit)</string>
    <string name="balance_available_transfer">Saldo yang Dapat Ditransfer :</string>
    <string name="reached_limit_amount">Pemindahan Dana Dapat Dilakukan Dengan Nilai lebih dari 0 dan Tidak Melebihi
        Saldo Tersedia
    </string>
    <string name="success_trf_notification">Transfer Berhasil</string>
    <string name="back_to_dashboard">Kembali ke Branda</string>
    <string name="show_detail">Lihat Rincian</string>
    <string name="greeting_text_bottom">Salam bersih Saber\nMenanti Sampah Mu</string>
    <string name="store_your_trash">Masukan Detail Sampah Kamu</string>
    <string name="trash_description">Deskripsi Sampah atau Barang</string>
    <string name="pickup_id">Id Pengambilan Sampah</string>
    <string name="trash_weight">Berat Sampah atau Barang (Kilo Gram)</string>
    <string name="trash_type">Type Sampah atau Barang</string>
    <string name="continue_store_trash">Store Sampah</string>
    <string name="cancel_store_trash">Batal</string>
    <string name="failed_con_server">Gagal Tersambung ke Server</string>
    <string name="unavailable_service">Layanan Belum Tersedia Saat Ini</string>
    <string name="trash_photo_format">"Silahkan Pilih File Berformat PNG, JPG, GIF"</string>
    <string name="fail_set_image">Gagal Melakukan Set Image</string>
    <string name="empty_field">Silahkan Isi Seluruh Field Yang Tersedia</string>
    <string name="success_trash_store">Sukes Melakukan Permintaan Pickup Sampah</string>
    <string name="fail_trash_store">Permintaan Pickup Sampah Gagal</string>
    <string name="err_network">Gagal Melakukan Permintaan, Silahkan Periksa Konensi Internet</string>
    <string name="success_register">Registasi Pengguna Sukses Silahkan Cek Email Untuk, Verifikasi Akun</string>
    <string name="loc_title_by_pin">Lokasi Pin Map</string>
    <string name="loc_option_by_pin">Opsi Lokasi</string>
    <string name="search_location">Cari Lokasi</string>
    <string name="loc_details">Tambahkan Detail Lokasi</string>
    <string name="not_found_loc">Lokasi Tidak Ditemukan</string>
    <string name="pickup_id_option_title">Pilih Pickup ID</string>
    <string name="pickup_loc_editable_title">Lokasi Pickup</string>
    <string name="pickup_id_title">Detail Pickup</string>
    <string name="pickup_date">Tanggal Pickup</string>
    <string name="dd">YYYY-MM-DD HH:MM (Format 24 Jam)</string>
    <string name="failed_get_details_accounts">Gagal Melakukan Pengambilan Detail User profile</string>
    <string name="detail_profile">Detail Profil Pengguna</string>
    <string name="profile">Profil</string>
    <string name="profile_edited">Edit Profil</string>
    <string name="logout_title">Logout</string>
    <string name="user_name_edited">Nama Pengguna Baru</string>
    <string name="password_edited">Password Baru (Isi jika ingin merubah)</string>
</resources>