<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_tarik_tunai"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="292dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_setor_sampah"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="377dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_detail_akun"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="232dp" />
</androidx.constraintlayout.widget.ConstraintLayout>