<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/white_rounded_bg"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
                android:textColor="@color/black"
                style="@style/huge_tittle_text_black"
                android:layout_gravity="top|center"
                android:text="@string/store_your_trash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:id="@+id/trashPhoto"
                android:layout_width="120dp"
                android:layout_height="120dp"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/trash_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/trashDesc"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textColor="@color/black"
                    android:text="@string/trash_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/trashWeight"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_gravity="center_vertical"
                        android:text="@string/trash_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <Spinner
                        android:layout_gravity="center_vertical|end"
                        android:id="@+id/trashTypeLists"
                        android:spinnerMode="dialog"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>

                </FrameLayout>

                <TextView
                    android:id="@+id/trashAmount"
                    android:textSize="12sp"
                    android:gravity="center|start"
                    android:textColor="@color/green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <FrameLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:text="@string/continue_store_trash"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:id="@+id/processStoreTrash"
                    android:layout_gravity="start"
                    style="@style/popUpBtn"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancelTrashProcess"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/cancel_store_trash"
                    android:layout_gravity="end"
                    style="@style/popUpBtn"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
