<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BalanceActivity">

    <FrameLayout
        android:background="@drawable/gradient_3_color_bg_top_global_deco"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <FrameLayout
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center|bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_gravity="center|start"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/huge_tittle_text"
                    android:id="@+id/userNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/huge_tittle_text_s2"
                    android:id="@+id/pinPointLocTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <ImageView
                android:layout_gravity="end|center"
                android:id="@+id/profileImage"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

        </FrameLayout>

    </FrameLayout>

    <LinearLayout
        android:background="@drawable/white_bg_with_shadow"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingBottom="4dp"
        android:layout_height="40dp">

        <android.widget.Button
            android:background="@drawable/white_rs_btn"
            style="@style/button_top_split"
            android:text="@string/balance_title"/>

        <android.widget.Button
            android:background="@drawable/white_ls_btn"
            android:text="@string/history_title"
            style="@style/button_top_split"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/balanceWrapper"
        android:layout_margin="10dp"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:paddingTop="15dp"
        android:paddingBottom="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="start|center"
            style="@style/huge_tittle_text_black"
            android:text="@string/your_balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="normal"
            android:layout_gravity="end|center"
            android:id="@+id/balanceTitle"
            style="@style/small_tittle_text_black"
            android:text="@string/your_balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <android.widget.Button
        android:id="@+id/withdrawBtn"
        android:layout_gravity="center"
        style="@style/button_style_1"
        android:text="@string/withdraw_label"
        android:layout_width="130dp"
        android:layout_height="wrap_content"/>

</LinearLayout>