<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        android:background="@color/white"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailBankTransfer">

    <LinearLayout
            android:orientation="horizontal"
            android:background="@drawable/gradient_3_color_bg_top_global_deco"
            android:layout_width="match_parent"
            android:layout_height="85dp"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="top|center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="40dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/rectagle_bank_trf"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        <TextView
                android:text="@string/success_trf_notification"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/huge_tittle_text_black"
                android:gravity="center"
                android:layout_gravity="center"/>

        <TextView
                android:layout_marginTop="15dp"
                android:layout_marginBottom="40dp"
                android:id="@+id/detailsTrf"
                android:gravity="start"
                android:textSize="14sp"
                android:layout_gravity="start|center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="normal"/>

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/greeting_text_bottom"
                style="@style/huge_tittle_text_black"
                android:gravity="center"
                android:layout_gravity="center"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
            android:layout_gravity="center|bottom"
            android:id="@+id/backToDashBoardFrDtl"
            style="@style/huge_tittle_text_s2"
            android:text="@string/back_to_dashboard"
            android:background="@drawable/gradient_3_color_bg_top_global_deco"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

</FrameLayout>