<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_bg"
    tools:context=".MainActivity">

    <FrameLayout
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_btn_1"
                    android:layout_gravity="start|center"
                    android:layout_width="110dp"
                    android:layout_height="110dp"/>

                <ImageView
                    android:id="@+id/image_btn_2"
                    android:layout_gravity="end|center"
                    android:layout_width="110dp"
                    android:layout_height="110dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_btn_3"
                    android:layout_gravity="center"
                    android:layout_width="110dp"
                    android:layout_height="110dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_btn_4"
                    android:layout_gravity="start|center"
                    android:layout_width="110dp"
                    android:layout_height="110dp"/>

                <ImageView
                    android:id="@+id/image_btn_5"
                    android:layout_gravity="end|center"
                    android:layout_width="110dp"
                    android:layout_height="110dp"/>

            </FrameLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:text="@string/foot_title_huge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:text="@string/foot_title_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_gravity="center|bottom"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logInBtn"
                style="@style/button_style_1"
                android:text="@string/button_login"
                android:layout_gravity="start|center"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpBtn"
                style="@style/button_style_1"
                android:text="@string/action_sign_up"
                android:layout_gravity="end|center"/>

        </FrameLayout>

    </FrameLayout>

</FrameLayout>